--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
   <h1>Welcome to Minicraft Archives!</h1>
-  <p>Here you will find an archive of Minicraft mods and related projects created by the community since Minicraft was released in Ludum Dare 22() until today.</p>
+  <p>Here you will find an archive of Minicraft mods and related projects created by the community since Minicraft was released in Ludum Dare 22(2011/12) until today.</p>
 </body>
 </html>
