--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 <body>
   <h1>Welcome to Minicraft Archives!</h1>
   <p>Here you will find an archive of Minicraft mods and related projects created by the community since Minicraft was released in Ludum Dare 22(2011/12) until today.</p>
+  <p>This page is under construction. Archives and mods are available for download below.</p>
+  <a href="https://github.com/masato462/Minicraft-Rebuild-and-Mod-Archives/tree/master/minicraft_archives">Github</a>
 </body>
 </html>
